Mon Dec 30 16:11:52 2013  WATANABE Hirofumi  <eban@ruby-lang.org>

	* tool/make-snapshot: needs CXXFLAGS.  [ruby-core:59393][Bug #9320]

Sun Dec 29 18:36:54 2013  Shota Fukumori  <her@sorah.jp>

	* lib/mkmf.rb (configuration): Make CXXFLAGS customizable.
	  Patch by Kohei Suzuki (eagletmt). [Fixes GH-492]

Sun Dec 29 12:11:11 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* proc.c (mnew_from_me): keep iclass as-is, to make inheritance
	  chain consistent.  [ruby-core:59358] [Bug #9315]

	* proc.c (method_owner): return the original defined_class from
	  prepended iclass, instead.

Sun Dec 29 08:47:24 2013  Lucas Allan Amorim  <lucas.allan@gmail.com>

	* test/ruby/test_sprintf.rb (test_hash): Added tests for sprintf
	  with a hash as parameter.  [Fixes GH-491]

Sun Dec 29 07:27:51 2013  Benoit Daloze  <eregontp@gmail.com>

	* compar.c (cmp_eq_recursive): Fix the return value, the value for
	  failed #<=> should be nil. It was raising a NoMethodError for
	  the test case TestComparable#test_no_cmp (undefined method `>'
	  for false:FalseClass). Yet one more reason for #7688.

Sat Dec 28 22:21:59 2013  Benoit Daloze  <eregontp@gmail.com>

	* object.c (Kernel#<=>) surround Comparable operators with <code> tags.
	  The #== method was hidden in ri/rdoc's output and was highlighting
	  the line instead.

Sat Dec 28 17:24:00 2013  DV Suresh  <e@dvsuresh.me>

	* benchmark/bm_so_meteor_contest.rb: [DOC] Fix a few typos
	* ext/fiddle/lib/fiddle/import.rb: ditto
	* ext/psych/lib/psych.rb: ditto
	* ext/psych/lib/psych/nodes/sequence.rb: ditto
	* ext/tk/lib/multi-tk.rb: ditto
	* ext/tk/lib/tcltk.rb: ditto

Sat Dec 28 00:42:37 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* parse.y (local_push_gen, local_pop_gen): save cmdarg_stack to
	  isolate command argument state from outer scope.
	  [ruby-core:59342] [Bug #9308]

Fri Dec 27 13:25:03 2013  NAKAMURA Usaku  <usa@ruby-lang.org>

	* win32/{setup.mak,Makefile.sub}: update fake.rb like
	  template/fake.rb.in.
